.ci/openshift-ci/smoke/service.yaml
# Copyright (c) 2020 Red Hat, Inc.
#
# SPDX-License-Identifier: Apache-2.0
#
# Create the service on port 80 for the http-server app.
---
apiVersion: v1
kind: Service
metadata:
  name: http-server-service
spec:
  selector:
    app: http-server-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
# Create the route to the app's service '/'.
---
apiVersion: v1
kind: Route
metadata:
  name: http-server-route
spec:
  path: "/"
  to:
    kind: Service
    name: http-server-service
